new methods for deleting profiles

--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -84,6 +84,11 @@ jobs:
           exit $((GCE_ZID >= ${#GCE_ZONES[@]})) # 0 => success
       - name: VM Docker run
         run: |
+          # https://github.com/kyma-project/test-infra/issues/93#issuecomment-457263589
+          for i in $(gcloud compute os-login ssh-keys list | grep -v FINGERPRINT); do \
+              echo "Removing ssh key"; \
+              gcloud compute os-login ssh-keys remove --key $i || true; \
+          done
           gcloud compute ssh ${{ env.VM_NAME }} \
             --zone=${{ env.VM_ZONE }} \
             --command "sudo gcloud auth configure-docker"
@@ -96,7 +101,6 @@ jobs:
           gcloud compute instances delete ${{ env.VM_NAME }} \
             --zone=${{ env.VM_ZONE }} \
             --quiet
-          gcloud compute os-login ssh-keys remove --key-file "${HOME}"/.ssh/google_compute_engine.pub
       - name: Docker delete
         if: always()
         run: |
