--- a/.github/workflows/Dockerfile.ubuntu-cuda
+++ b/.github/workflows/Dockerfile.ubuntu-cuda
@@ -1,7 +1,6 @@
 # FROM must be called before other ARGS except for ARG BASE_IMAGE
 ARG BASE_IMAGE
-# FROM ${BASE_IMAGE}
-FROM ubuntu:18.04
+FROM ${BASE_IMAGE}
 
 # For miniconda and the rest of this Dockerfile
 SHELL ["/bin/bash", "-c"]
