--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -73,7 +73,7 @@ jobs:
               --accelerator="count=2,type=nvidia-tesla-t4" \
               --maintenance-policy=TERMINATE \
               --machine-type=n1-standard-4 \
-              --boot-disk-size=240GB \
+              --boot-disk-size=960GB \
               --boot-disk-type=pd-ssd \
               --metadata="install-nvidia-driver=True,proxy-mode=project_editors"; do
             ((GCE_ZID = GCE_ZID + 1))
@@ -99,6 +99,9 @@ jobs:
           gcloud compute ssh ${{ env.VM_NAME }} \
             --zone=${{ env.VM_ZONE }} \
             --command "sudo docker run -i --rm --gpus all ${{ env.GCLOUD_DOCKER_TAG }} nvidia-smi"
+          gcloud compute ssh ${{ env.VM_NAME }} \
+            --zone=${{ env.VM_ZONE }} \
+            --command "df -h"
       - name: VM delete
         if: always()
         run: |
