--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -102,14 +102,14 @@ jobs:
           gcloud compute ssh ${{ env.VM_NAME }} \
             --zone=${{ env.VM_ZONE }} \
             --command "df -h"
-      - name: VM delete
-        if: always()
-        run: |
-          gcloud compute instances delete ${{ env.VM_NAME }} \
-            --zone=${{ env.VM_ZONE }} \
-            --quiet
-      - name: Docker delete
-        if: always()
-        run: |
-          docker push ${{ env.GCLOUD_DOCKER_TAG }}
-          gcloud container images delete ${{ env.GCLOUD_DOCKER_TAG }}
+      # - name: VM delete
+      #   if: always()
+      #   run: |
+      #     gcloud compute instances delete ${{ env.VM_NAME }} \
+      #       --zone=${{ env.VM_ZONE }} \
+      #       --quiet
+      # - name: Docker delete
+      #   if: always()
+      #   run: |
+      #     docker push ${{ env.GCLOUD_DOCKER_TAG }}
+      #     gcloud container images delete ${{ env.GCLOUD_DOCKER_TAG }}
