--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -83,6 +83,7 @@ jobs:
               --machine-type=n1-standard-4 \
               --boot-disk-size=120GB \
               --boot-disk-type=pd-ssd \
+              --scopes https://www.googleapis.com/auth/devstorage.full_control \
               --metadata="install-nvidia-driver=True,proxy-mode=project_editors"; do
             ((GCE_ZID = GCE_ZID + 1))
           done
