--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -26,29 +26,62 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Debug
+      - name: Package code
         run: |
-          echo ${GITHUB_WORKSPACE}
+          # GITHUB_WORKSPACE: /home/runner/work/Open3D/Open3D
+          cd ${GITHUB_WORKSPACE}/..
+          tar -czvf Open3D.tar.gz Open3D
           ls -alh
-          pwd
-      # - name: GCloud CLI setup
-      #   uses: google-github-actions/setup-gcloud@master
-      #   with:
-      #     version: ${{ env.GCE_CLI_GHA_VERSION }}
-      #     service_account_key: ${{ secrets.GCE_SA_KEY_GPU_CI }}
-      #     project_id: ${{ secrets.GCE_PROJECT }}
-      # - name: Maximize build space
-      #   run: |
-      #     source util/ci_utils.sh
-      #     maximize_ubuntu_github_actions_build_space
-      # - name: Set container and vm names in GITHUB_ENV
-      #   run: |
-      #     GIT_HASH=$(git rev-parse --short HEAD)
-      #     DOCKER_TAG=open3d-ubuntu-cuda-gcloud-ci:2-bionic-${GIT_HASH}
-      #     VM_NAME=open3d-ubuntu-cuda-gcloud-ci-2-bionic-${GIT_HASH}
-      #     echo "GIT_HASH=${GIT_HASH}"                   >> $GITHUB_ENV
-      #     echo "DOCKER_TAG=${DOCKER_TAG}"               >> $GITHUB_ENV
-      #     echo "VM_NAME=${VM_NAME}"                     >> $GITHUB_ENV
+      - name: Set container and vm names in GITHUB_ENV
+        run: |
+          GIT_HASH=$(git rev-parse --short HEAD)
+          DOCKER_TAG=open3d-ubuntu-cuda-gcloud-ci:2-bionic-${GIT_HASH}
+          VM_NAME=open3d-ubuntu-cuda-gcloud-ci-2-bionic-${GIT_HASH}
+          echo "GIT_HASH=${GIT_HASH}"                   >> $GITHUB_ENV
+          echo "DOCKER_TAG=${DOCKER_TAG}"               >> $GITHUB_ENV
+          echo "VM_NAME=${VM_NAME}"                     >> $GITHUB_ENV
+      - name: GCloud CLI setup
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          version: ${{ env.GCE_CLI_GHA_VERSION }}
+          service_account_key: ${{ secrets.GCE_SA_KEY_GPU_CI }}
+          project_id: ${{ secrets.GCE_PROJECT }}
+      - name: VM create
+        run: |
+          GCE_ZONES=(us-west1-a us-west1-b us-central1-a us-central1-b
+                     us-central1-f us-east1-c us-east1-d us-east4-b
+                     southamerica-east1-c europe-west2-b europe-west3-b
+                     europe-west4-b europe-west4-c europe-west2-a
+                     asia-southeast1-b asia-southeast1-c australia-southeast1-a)
+          GCE_ZID=0
+          until ((GCE_ZID >= ${#GCE_ZONES[@]})) ||
+            gcloud compute instances create ${{ env.VM_NAME }} \
+              --project=${{ secrets.GCE_PROJECT }} \
+              --zone="${GCE_ZONES[$GCE_ZID]}" \
+              --service-account="${{ secrets.GCE_GPU_CI_SA }}" \
+              --image-family common-cu110 \
+              --image-project deeplearning-platform-release \
+              --accelerator="count=2,type=nvidia-tesla-t4" \
+              --maintenance-policy=TERMINATE \
+              --machine-type=n1-standard-4 \
+              --boot-disk-size=120GB \
+              --boot-disk-type=pd-ssd \
+              --scopes https://www.googleapis.com/auth/devstorage.full_control \
+              --metadata="install-nvidia-driver=True,proxy-mode=project_editors"; do
+            ((GCE_ZID = GCE_ZID + 1))
+          done
+          VM_ZONE="${GCE_ZONES[$GCE_ZID]}"
+          echo "VM created successfully in VM_ZONE=${VM_ZONE}"
+          echo "VM_ZONE=${VM_ZONE}" >> "$GITHUB_ENV"
+          sleep 90s # Wait for nvidia driver installation
+          exit $((GCE_ZID >= ${#GCE_ZONES[@]})) # 0 => success
+      - name: VM copy code
+        run: |
+          gcloud compute scp --recurse ${GITHUB_WORKSPACE} ${{ env.VM_NAME }}:~
+          gcloud compute ssh ${{ env.VM_NAME }} \
+            --zone=${{ env.VM_ZONE }} \
+            --command "ls -alh"
+
       # - name: Docker build
       #   run: |
       #     .github/workflows/docker_build.sh 2-bionic
@@ -125,12 +158,12 @@ jobs:
       #     gcloud compute ssh ${{ env.VM_NAME }} \
       #       --zone=${{ env.VM_ZONE }} \
       #       --command "df -h"
-      # - name: VM delete
-      #   if: always()
-      #   run: |
-      #     gcloud compute instances delete ${{ env.VM_NAME }} \
-      #       --zone=${{ env.VM_ZONE }} \
-      #       --quiet
+      - name: VM delete
+        if: always()
+        run: |
+          gcloud compute instances delete ${{ env.VM_NAME }} \
+            --zone=${{ env.VM_ZONE }} \
+            --quiet
       # - name: Docker delete
       #   if: always()
       #   run: |
