--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -71,7 +71,7 @@ jobs:
           VM_ZONE="${GCE_ZONES[$GCE_ZID]}"
           echo "VM created successfully in VM_ZONE=${VM_ZONE}"
           echo "VM_ZONE=${VM_ZONE}" >> "$GITHUB_ENV"
-          sleep 120s # Wait for nvidia driver installation
+          sleep 90s # Wait for nvidia driver installation
           exit $((GCE_ZID >= ${#GCE_ZONES[@]})) # 0 => success
       - name: VM copy code
         run: |
@@ -80,17 +80,14 @@ jobs:
               echo "Removing ssh key"; \
               gcloud compute os-login ssh-keys remove --key $i || true; \
           done
-          # gcloud compute scp --recurse ${GITHUB_WORKSPACE} ${{ env.VM_NAME }}:~ \
-          #   --zone=${{ env.VM_ZONE }}
-          gcloud compute ssh ${{ env.VM_NAME }} \
-            --zone=${{ env.VM_ZONE }} \
-            --command "ls -alh"
           gcloud compute scp ${GITHUB_WORKSPACE}/../Open3D.tar.gz ${{ env.VM_NAME }}:~ \
             --zone=${{ env.VM_ZONE }}
           gcloud compute ssh ${{ env.VM_NAME }} \
             --zone=${{ env.VM_ZONE }} \
-            --command "ls -alh"
-
+            --command "ls -alh \
+                    && tar -xvzf Open3D.tar.gz \
+                    && ls -alh \
+                    && ls -alh Open3D"
       # - name: Docker build
       #   run: |
       #     .github/workflows/docker_build.sh 2-bionic
