simplify how DOCKER_TAG and CCACHE_TAR_NAME is exported

--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -30,13 +30,11 @@ jobs:
           cd ${GITHUB_WORKSPACE}/..
           tar -czvf Open3D.tar.gz Open3D
           ls -alh
-      - name: Set container and vm names in GITHUB_ENV
+      - name: Set GCloud VM_NAME in GITHUB_ENV
         run: |
           GIT_HASH=$(git rev-parse --short HEAD)
-          DOCKER_TAG=open3d-ubuntu-cuda-gcloud-ci:2-bionic-${GIT_HASH}
           VM_NAME=open3d-ubuntu-cuda-gcloud-ci-2-bionic-${GIT_HASH}
           echo "GIT_HASH=${GIT_HASH}"                   >> $GITHUB_ENV
-          echo "DOCKER_TAG=${DOCKER_TAG}"               >> $GITHUB_ENV
           echo "VM_NAME=${VM_NAME}"                     >> $GITHUB_ENV
       - name: GCloud CLI setup
         uses: google-github-actions/setup-gcloud@master
