--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -91,6 +91,8 @@ jobs:
           gcloud compute ssh ${{ env.VM_NAME }} \
             --zone=${{ env.VM_ZONE }} \
             --command "Open3D/.github/workflows/docker_build.sh 2-bionic"
+          echo "Docker DOCKER_TAG=${{ env.DOCKER_TAG }} is built."
+          echo "CCache tar CCACHE_TAR_NAME=${{ env.CCACHE_TAR_NAME }} is generated."
       # - name: Docker save
       #   run: |
       #     docker image ls
