--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -35,8 +35,9 @@ jobs:
           GIT_HASH=$(git rev-parse --short HEAD)
           DOCKER_TAG=open3d-ubuntu-cuda-gcloud-ci:2-bionic-${GIT_HASH}
           VM_NAME=open3d-ubuntu-cuda-gcloud-ci-2-bionic-${GIT_HASH}
-          echo "GIT_HASH=${GIT_HASH}"                   >> $GITHUB_ENV
-          echo "VM_NAME=${VM_NAME}"                     >> $GITHUB_ENV
+          echo "GIT_HASH=${GIT_HASH}"     >> $GITHUB_ENV
+          echo "DOCKER_TAG=${DOCKER_TAG}" >> $GITHUB_ENV
+          echo "VM_NAME=${VM_NAME}"       >> $GITHUB_ENV
       - name: GCloud CLI setup
         uses: google-github-actions/setup-gcloud@master
         with:
