--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -20,6 +20,9 @@ jobs:
           - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-gcloud-ci:2-bionic
             CCACHE_TAR_NAME  : open3d-ubuntu-1804-cuda-ci-ccache
             VM_NAME_PREFIX   : open3d-ubuntu-cuda-gcloud-ci-2-bionic
+          - DOCKER_TAG_PREFIX: open3d-ubuntu-cuda-gcloud-ci:3-ML-SHARED-bionic
+            CCACHE_TAR_NAME  : open3d-ubuntu-1804-cuda-ci-ccache
+            VM_NAME_PREFIX   : open3d-ubuntu-cuda-gcloud-ci-3-ML-SHARED-bionic
     env:
       DEVELOPER_BUILD: ON
       PYTHON_VERSION: 3.6
