remove config-ssh

--- a/.github/workflows/ubuntu-cuda-all-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-all-gcloud.yml
@@ -97,7 +97,7 @@ jobs:
               echo "Removing ssh key"; \
               gcloud compute os-login ssh-keys remove --key $i || true; \
           done
-          gcloud compute config-ssh
+          # gcloud compute config-ssh
           gcloud compute scp ${GITHUB_WORKSPACE}/../Open3D.tar.gz ${{ env.VM_NAME }}:~ \
             --zone=${{ env.VM_ZONE }}
           gcloud compute ssh ${{ env.VM_NAME }} \
