--- a/cpp/open3d/ml/pytorch/CMakeLists.txt
+++ b/cpp/open3d/ml/pytorch/CMakeLists.txt
@@ -154,3 +154,7 @@ if (BUILD_CUDA_MODULE)
         )
     endif()
 endif()
+
+install(TARGETS open3d_torch_ops EXPORT Open3DTargets
+    LIBRARY DESTINATION ${Open3D_INSTALL_LIB_DIR}
+)
