install op libraries with separate cmake config files

--- a/cpp/open3d/ml/tensorflow/CMakeLists.txt
+++ b/cpp/open3d/ml/tensorflow/CMakeLists.txt
@@ -175,6 +175,7 @@ if (BUILD_CUDA_MODULE)
     endif()
 endif()
 
-install(TARGETS open3d_tf_ops EXPORT Open3DTargets
+install(TARGETS open3d_tf_ops EXPORT Open3DTFOps
     LIBRARY DESTINATION ${Open3D_INSTALL_LIB_DIR}
 )
+install(EXPORT Open3DTFOps NAMESPACE ${PROJECT_NAME}:: DESTINATION ${Open3D_INSTALL_CMAKE_DIR})
