various fixes for dpcpp

--- a/3rdparty/benchmark/MakeAvailable/CMakeLists.txt
+++ b/3rdparty/benchmark/MakeAvailable/CMakeLists.txt
@@ -8,6 +8,7 @@ if(GLIBCXX_USE_CXX11_ABI)
 else()
     add_compile_definitions(_GLIBCXX_USE_CXX11_ABI=0)
 endif()
+add_compile_options($<$<CXX_COMPILER_ID:IntelLLVM>:-fno-fast-math>)
 
 FetchContent_MakeAvailable(ext_benchmark)
 
